# plugin-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConscript_plugin-sdk  conanfile.txt  entity_path_specs.json  go.mod  init.go  run_sdk_tests.cmake  xllr_api.h  xllr_plugin_interface.h
api/: CMakeLists.txt  api_doc.md  api_tests_doc.md
api/cpp/: CMakeLists.txt
api/cpp/src/: metaffi_api.cpp  metaffi_api_c.cpp
api/cpp/tests/: c_api_test.cpp  cpp_api_test.cpp
api/go/: CMakeLists.txt  MetaFFIModule.go  MetaFFIRuntime.go  go.mod
api/go/metaffi/: CDT.go  GoCallable.go  GoCallableExport.go  MetaFFIGoHostCommon.go  ObjectsTable.go  ReleaserGetter.go  TraverseConstruct.go  TraverseConstructCallbacks.go  XLLRAccessor.go  init.go  logger_c_stub.c  typed_cdt.go
api/go/unittest/: go.mod  go_api_test.go
api/jvm/: CMakeLists.txt  MetaFFIModule.java  MetaFFIRuntime.java
api/jvm/accessor/: metaffi_api_accessor.cpp  metaffi_api_accessor.h
api/jvm/runtime/: api_runtime.cpp  cdts_java_wrapper.cpp  cdts_java_wrapper.h  class_loader.cpp  class_loader.h  contexts.h  exception_macro.h  jarray_wrapper.cpp  jbyte_wrapper.cpp  jchar_wrapper.cpp  jdouble_wrapper.cpp  jlong_wrapper.cpp  jni_caller.cpp  jni_caller.h  jni_class.cpp  jni_class.h  jni_metaffi_handle.cpp  jni_metaffi_handle.h  jshort_wrapper.cpp  jstring_wrapper.cpp  jvalue_wrapper.cpp  objects_table.h  xllr_jvm_exports.h
api/jvm/unittest/: TestJVMAPI.java
api/python3/: CMakeLists.txt  LICENSE  README.md  publish_python_package.py  pyproject.toml
api/python3/metaffi/: __init__.py  classes_metaffi.puml  metaffi_module.py  metaffi_runtime.py  metaffi_types.py  metaffihandle.py  pycdts_converter.py  xllr_wrapper.py
api/python3/unittest/: test_python3_api.py
cdts_serializer/: CMakeLists.txt  serializer_doc.md  serializer_tests_doc.md
cdts_serializer/c/: CMakeLists.txt  cdts_c_serializer.c  cdts_c_serializer.h  cdts_c_serializer_test.cpp
cdts_serializer/cpp/: CMakeLists.txt  cdts_cpp_serializer.cpp  cdts_cpp_serializer.h  cdts_cpp_serializer_test.cpp  runtime_id.h
cdts_serializer/cpython3/: CMakeLists.txt  cdts_python3_serializer.cpp  cdts_python3_serializer.h  cdts_python3_serializer_test.cpp  runtime_id.h
cdts_serializer/go/: CMakeLists.txt  cdts_go_serializer.go  cdts_go_serializer_test.go  cdts_test_helpers.go  go.mod  xllr_capi_loader.c
cdts_serializer/jvm/: CMakeLists.txt  cdts_jvm_serializer.cpp  cdts_jvm_serializer.h  cdts_jvm_serializer_test.cpp  runtime_id.h
cmake/: prerm  (+11 more)
compiler/: CMakeLists.txt  CompilerPluginInterfaceHandler.go  CompilerPluginInterfaceWrapper.go  IDLDefinition.go  IDLPluginInterfaceHandler.go  IDLPluginInterfaceWrapper.go  LanguagePluginInterfaceHandler.go  OpenFFIPrimitives.go  SerializerPluginInterfaceHandler.go  SerializerPluginInterfaceWrapper.go  WellKnownTags.go  compiler_doc.md  compiler_plugin_interface.h  compiler_tests_doc.md  go.mod  idl_plugin_interface.h  init.go  language_plugin_interface.h  serializer_plugin_interface.h
compiler/cpp/: CMakeLists.txt
compiler/cpp/guest/: guest_compiler.cpp  guest_compiler.h  xcall_generator.cpp  xcall_generator.h
compiler/cpp/host/: code_generator.cpp  code_generator.h  entity_path_converter.cpp  entity_path_converter.h  host_compiler.cpp  host_compiler.h  type_mapper.cpp  type_mapper.h
compiler/go/: CMakeLists.txt  IDLDefinition.go  IDLPluginInterfaceHandler.go  LanguagePluginInterfaceHandler.go  LanguagePluginMain.go  OpenFFIPrimitives.go  PassMethod.go  SerializerPluginInterfaceHandler.go  Utils.go  WellKnownTags.go  compiler.go  go.mod
compiler/jvm/: CMakeLists.txt
compiler/python3/: CMakeLists.txt  __init__.py
idl_compiler/cpp/: CMakeLists.txt  entity_path.cpp  entity_path.h  extractor.cpp  extractor.h  idl_generator.cpp  idl_generator.h  type_mapper.cpp  type_mapper.h
idl_compiler/jvm/: CMakeLists.txt
idl_entities/: CMakeLists.txt  entity_path_specs.json  type_mapping_doc.md
idl_entities/cpp/: CMakeLists.txt  type_mapping.md
idl_entities/go/: go.mod
idl_entities/jvm/: CMakeLists.txt  type_mapping.md
idl_entities/python3/: CMakeLists.txt  __init__.py  type_mapper.py  type_mapping.md
runtime_manager/: CMakeLists.txt  runtime_manager_doc.md  runtime_manager_tests_doc.md
runtime_manager/cpp/: CMakeLists.txt  cpp_abi.cpp  cpp_abi.h  entity.cpp  entity.h  module.cpp  module.h  runtime_manager.cpp  runtime_manager.h  runtime_manager_test.cpp
runtime_manager/cpython3/: CMakeLists.txt  README.md  entity.cpp  entity.h  gil_guard.h  module.cpp  module.h  py_bool.cpp  py_bool.h  py_bytes.cpp  py_bytes.h  py_float.cpp  py_float.h  py_int.cpp  py_int.h  py_list.cpp  py_list.h  py_metaffi_handle.cpp  py_metaffi_handle.h  py_object.cpp  py_object.h  py_str.cpp  py_str.h  py_tuple.cpp  py_tuple.h  py_utils.cpp  py_utils.h  python_api_wrapper.cpp  python_api_wrapper.h  python_h_declares.h  python_utils.cpp  python_utils.h  runtime_manager.cpp  runtime_manager.h  runtime_manager_test.cpp
runtime_manager/go/: CMakeLists.txt  entity.cpp  entity.h  module.cpp  module.h  runtime_manager.cpp  runtime_manager.h  runtime_manager_test.cpp
runtime_manager/jdk/: CMakeLists.txt  entity.cpp  entity.h  jni_api_wrapper.cpp  jni_api_wrapper.h  jvm.cpp  jvm.h  module.cpp  module.h  runtime_manager.cpp  runtime_manager.h  runtime_manager_test.cpp
runtime_manager/jvm/: CMakeLists.txt  api_runtime.cpp  argument_definition.cpp  argument_definition.h  cdts_java_wrapper.cpp  cdts_java_wrapper.h  class_loader.cpp  class_loader.h  contexts.h  entity.cpp  entity.h  exception_macro.h  jarray_wrapper.cpp  jarray_wrapper.h  jboolean_wrapper.cpp  jboolean_wrapper.h  jbyte_wrapper.h  jchar_wrapper.h  jdouble_wrapper.h  jfloat_wrapper.cpp  jfloat_wrapper.h  jint_wrapper.cpp  jint_wrapper.h  jlong_wrapper.h  jni_api_wrapper.cpp  jni_api_wrapper.h  jni_caller.cpp  jni_caller.h  jni_helpers.h  jni_metaffi_handle.cpp  jni_metaffi_handle.h  jni_size_utils.h  jobject_wrapper.cpp  jobject_wrapper.h  jshort_wrapper.h  jstring_wrapper.h  jvalue_wrapper.h  jvm.cpp  jvm.h  module.cpp  (+5 more)
test_modules/guest_modules/: CMakeLists.txt  guest_modules_doc.md
(+310 files in other folders)
